ubersetzung von anderen worter

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 
   <div id="ergebnis"></div>
 
-  <div id="miModal" class="modal">
-    <div class="modal-contenido">
+  <div id="meinModal" class="modal">
+    <div class="modal-inhalt">
       <span class="schliessen" onclick="modalSchliessen()">&times;</span>
       <h3 id="modal-titel"></h3>
       <p id="modal-text"></p>
