--- a/index.html
+++ b/index.html
@@ -14,36 +14,42 @@
     <div class="anforderung" data-id="anforderung1">
         <label><input type="radio" name="verpflichtende_angabe_1" value="ja"> Ja</label>
         <label><input type="radio" name="verpflichtende_angabe_1" value="nein"> Nein</label>
+        <span style="display: inline-block; width: 4ch;"></span>
         Gibt es eine Person oder Stelle, die für die Daten verantwortlich ist?
         <button type="button" onclick="modalOeffnen('Hinweis', 'Es muss klar sein, wer für den Umgang mit den Daten verantwortlich ist – also wer entscheidet, wie und warum die Daten verarbeitet werden (z.B. dein Unternehmen, für das du die Website betreibst)')">ℹ️</button>
     </div>
     <div class="anforderung" data-id="anforderung2">
         <label><input type="radio" name="verpflichtende_angabe_2" value="ja"> Ja</label>
         <label><input type="radio" name="verpflichtende_angabe_2" value="nein"> Nein</label>
+        <span style="display: inline-block; width: 4ch;"></span>
         Gibt es einen oder mehrere Gründe dafür, warum die Daten verarbeitet werden?
         <button type="button" onclick="modalOeffnen('Hinweis', 'Hier solltest du kurz beschreiben, zu welchen Zwecken die Daten verarbeitet werden. Personen dürfen ihre Daten nur für bestimmte, nachvollziehbare Zwecke zur Verfügung stellen. Eine Weiterverwendung für andere Zwecke ist nicht erlaubt.')">ℹ️</button>
     </div>
     <div class="anforderung" data-id="anforderung3">
         <label><input type="radio" name="verpflichtende_angabe_3" value="ja"> Ja</label>
         <label><input type="radio" name="verpflichtende_angabe_3" value="nein"> Nein</label>
+        <span style="display: inline-block; width: 4ch;"></span>
         Gibt es eine rechtliche Grundlage, die die Datenverarbeitung erlaubt?
         <button type="button" onclick="modalOeffnen('Hinweis', 'Daten dürfen nur verarbeitet werden, wenn es dafür eine gesetzliche Grundlage gibt – z. B. weil eine Einwilligung vorliegt oder ein Vertrag erfüllt werden muss.')">ℹ️</button>
     </div>
     <div class="anforderung" data-id="anforderung4">
         <label><input type="radio" name="verpflichtende_angabe_4" value="ja"> Ja</label>
         <label><input type="radio" name="verpflichtende_angabe_4" value="nein"> Nein</label>
+        <span style="display: inline-block; width: 4ch;"></span>
         Ist die Dauer der Datenspeicherung festgelegt?
         <button type="button" onclick="modalOeffnen('Hinweis', 'Es sollte klar sein, wie lange Daten gespeichert werden. Daten dürfen nicht unbegrenzt aufbewahrt werden, sondern müssen nach einem bestimmten Zeitraum gelöscht werden.')">ℹ️</button>
     </div>
     <div class="anforderung" data-id="anforderung5">
         <label><input type="radio" name="verpflichtende_angabe_5" value="ja"> Ja</label>
         <label><input type="radio" name="verpflichtende_angabe_5" value="nein"> Nein</label>
+        <span style="display: inline-block; width: 4ch;"></span>
         Werden die Betroffenen über ihre Rechte informiert?
         <button type="button" onclick="modalOeffnen('Hinweis', 'Personen müssen wissen, was mit ihren Daten passiert und welche Rechte sie haben – z.B. das Recht auf Auskunft, Berichtigung oder Löschung.')">ℹ️</button>
     </div>
     <div class="anforderung" data-id="anforderung6">
         <label><input type="radio" name="verpflichtende_angabe_6" value="ja"> Ja</label>
         <label><input type="radio" name="verpflichtende_angabe_6" value="nein"> Nein</label>
+        <span style="display: inline-block; width: 4ch;"></span>
         Gibt es ein Beschwerderecht bei einer Aufsichtsbehörde?
         <button type="button" onclick="modalOeffnen('Hinweis', 'Hier solltest du erklären, ob und wie Betroffene eine Beschwerde bei einer Datenschutzaufsichtsbehörde einreichen können. Wenn jemand glaubt, dass mit seinen Daten nicht korrekt umgegangen wird, muss er sich bei einer offiziellen Stelle beschweren können.')">ℹ️</button>
     </div>
@@ -54,6 +60,7 @@
             <label><input type="radio" name="einzelfallbezogene_angabe_1" value="ja"> Ja</label>
             <label><input type="radio" name="einzelfallbezogene_angabe_1" value="na"> Nicht anwendbar</label>
             <label><input type="radio" name="einzelfallbezogene_angabe_1" value="nein"> Nein</label>
+            <span style="display: inline-block; width: 4ch;"></span>
             Gibt es einen Datenschutzbeauftragten?
             <button type="button" onclick="modalOeffnen('Hinweis', 'In manchen Fällen ist ein Datenschutzbeauftragter gesetzlich vorgeschrieben. Diese Person kümmert sich darum, dass Datenschutzvorgaben eingehalten werden.')">ℹ️</button>
         </div>
@@ -61,6 +68,7 @@
             <label><input type="radio" name="einzelfallbezogene_angabe_2" value="ja"> Ja</label>
             <label><input type="radio" name="einzelfallbezogene_angabe_2" value="na"> Nicht anwendbar</label>
             <label><input type="radio" name="einzelfallbezogene_angabe_2" value="nein"> Nein</label>
+        <span style="display: inline-block; width: 4ch;"></span>
             Gibt es einen Grund, warum die Daten verarbeitet werden, auch wenn keine Einwilligung vorliegt?
             <button type="button" onclick="modalOeffnen('Hinweis', 'Daten dürfen nur dann ohne Einwilligung verarbeitet werden, wenn es gesetzlich erlaubt ist – z.B. zur Vertragserfüllung oder weil ein berechtigtes Interesse vorliegt.')">ℹ️</button>
         </div>
@@ -68,6 +76,7 @@
             <label><input type="radio" name="einzelfallbezogene_angabe_3" value="ja"> Ja</label>
             <label><input type="radio" name="einzelfallbezogene_angabe_3" value="na"> Nicht anwendbar</label>
             <label><input type="radio" name="einzelfallbezogene_angabe_3" value="nein"> Nein</label>
+        <span style="display: inline-block; width: 4ch;"></span>
             Werden die Daten an andere Personen oder Firmen weitergegeben?
             <button type="button" onclick="modalOeffnen('Hinweis', 'Gemeint ist z.B., ob externe Dienstleister, Partnerunternehmen oder andere Stellen Zugriff auf die Daten erhalten.')">ℹ️</button>
         </div>
@@ -75,6 +84,7 @@
             <label><input type="radio" name="einzelfallbezogene_angabe_4" value="ja"> Ja</label>
             <label><input type="radio" name="einzelfallbezogene_angabe_4" value="na"> Nicht anwendbar</label>
             <label><input type="radio" name="einzelfallbezogene_angabe_4" value="nein"> Nein</label>
+        <span style="display: inline-block; width: 4ch;"></span>
             Werden die Daten in ein Land außerhalb der EU geschickt?
             <button type="button" onclick="modalOeffnen('Hinweis', 'Wenn Daten in Länder außerhalb der EU übertragen werden, gelten besondere Regeln – z.B. müssen dort ähnliche Datenschutzstandards herrschen.')">ℹ️</button>
         </div>
@@ -82,6 +92,7 @@
             <label><input type="radio" name="einzelfallbezogene_angabe_5" value="ja"> Ja</label>
             <label><input type="radio" name="einzelfallbezogene_angabe_5" value="na"> Nicht anwendbar</label>
             <label><input type="radio" name="einzelfallbezogene_angabe_5" value="nein"> Nein</label>
+        <span style="display: inline-block; width: 4ch;"></span>
             Müssen Benutzer ihre Daten unbedingt angeben, oder geht es auch ohne?
             <button type="button" onclick="modalOeffnen('Hinweis', 'Es muss klar sein, ob die Angabe von Daten verpflichtend ist – z.B. für einen Vertragsabschluss – oder freiwillig')">ℹ️</button>
         </div>
@@ -89,6 +100,7 @@
             <label><input type="radio" name="einzelfallbezogene_angabe_6" value="ja"> Ja</label>
             <label><input type="radio" name="einzelfallbezogene_angabe_6" value="na"> Nicht anwendbar</label>
             <label><input type="radio" name="einzelfallbezogene_angabe_6" value="nein"> Nein</label>
+        <span style="display: inline-block; width: 4ch;"></span>
             Werden Entscheidungen automatisiert getroffen?
             <button type="button" onclick="modalOeffnen('Hinweis', 'Das betrifft z.B. automatisierte Entscheidungen durch Computerprogramme – etwa bei Kreditwürdigkeitsprüfungen oder Profilbildungen')">ℹ️</button>
         </div>
