--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <label><input type="radio" name="verpflichtende_angabe_6" value="ja"> Ja</label>
         <label><input type="radio" name="verpflichtende_angabe_6" value="nein"> Nein</label>
         <span style="display: inline-block; width: 4ch;"></span>
-        Gibt es ein Beschwerdemöglichkeit?
+        Gibt es eine Beschwerdemöglichkeit?
         <button type="button" onclick="modalOeffnen('Hinweis', 'Es sollte erklärt werden, wo man sich beschweren kann, wenn man glaubt, dass mit den eigenen Daten nicht richtig umgegangen wurde – z.B. bei einer offiziellen Datenschutzbehörde.')">ℹ️</button>
     </div>
     <form>
@@ -102,7 +102,7 @@
             <label><input type="radio" name="einzelfallbezogene_angabe_6" value="nein"> Nein</label>
         <span style="display: inline-block; width: 4ch;"></span>
             Werden Entscheidungen automatisiert getroffen?
-            <button type="button" onclick="modalOeffnen('Hinweis', 'Das betrifft z.B. automatisierte Entscheidungen durch Computerprogramme – etwa bei Kreditwürdigkeitsprüfungen oder Profilbildungen')">ℹ️</button>
+            <button type="button" onclick="modalOeffnen('Hinweis', 'Das betrifft z.B. automatisierte Entscheidungen durch Computerprogramme – etwa bei Kreditwürdigkeitsprüfungen oder Profilbildungen.')">ℹ️</button>
         </div>
   </form>
 
