--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <tr>
                     <td>
                         <label><input type="radio" name="verpflichtende_angabe_1" value="ja"> Ja</label>
-                        <label><input type="radio" name="verpflichtende_angabe_1" value="nein"> Nein</label>
+                        <label><input type="radio" name="verpflichtende_angabe_1" value="nein" checked> Nein</label>
                     </td>
                     <td>
                         1. Gibt es eine Person oder Stelle, die für die Daten verantwortlich ist?
@@ -29,7 +29,7 @@
                 <tr>
                     <td>
                         <label><input type="radio" name="verpflichtende_angabe_2" value="ja"> Ja</label>
-                        <label><input type="radio" name="verpflichtende_angabe_2" value="nein"> Nein</label>
+                        <label><input type="radio" name="verpflichtende_angabe_2" value="nein" checked> Nein</label>
                     </td>
                     <td>
                         2. Gibt es einen oder mehrere Gründe dafür, warum die Daten verarbeitet werden?
@@ -41,7 +41,7 @@
                 <tr>
                     <td>
                         <label><input type="radio" name="verpflichtende_angabe_3" value="ja"> Ja</label>
-                        <label><input type="radio" name="verpflichtende_angabe_3" value="nein"> Nein</label>
+                        <label><input type="radio" name="verpflichtende_angabe_3" value="nein" checked> Nein</label>
                     </td>
                     <td>
                         3. Gibt es eine rechtliche Grundlage, die die Datenverarbeitung erlaubt?
@@ -53,7 +53,7 @@
                 <tr>
                     <td>
                         <label><input type="radio" name="verpflichtende_angabe_4" value="ja"> Ja</label>
-                        <label><input type="radio" name="verpflichtende_angabe_4" value="nein"> Nein</label>
+                        <label><input type="radio" name="verpflichtende_angabe_4" value="nein" checked> Nein</label>
                     </td>
                     <td>
                         4. Ist die Dauer der Datenspeicherung festgelegt?
@@ -65,7 +65,7 @@
                 <tr>
                     <td>
                         <label><input type="radio" name="verpflichtende_angabe_5" value="ja"> Ja</label>
-                        <label><input type="radio" name="verpflichtende_angabe_5" value="nein"> Nein</label>
+                        <label><input type="radio" name="verpflichtende_angabe_5" value="nein" checked> Nein</label>
                     </td>
                     <td>
                         5. Werden die Betroffenen über ihre Rechte informiert?
@@ -77,7 +77,7 @@
                 <tr>
                     <td>
                         <label><input type="radio" name="verpflichtende_angabe_6" value="ja"> Ja</label>
-                        <label><input type="radio" name="verpflichtende_angabe_6" value="nein"> Nein</label>
+                        <label><input type="radio" name="verpflichtende_angabe_6" value="nein" checked> Nein</label>
                     </td>
                     <td>
                         6. Gibt es eine Beschwerdemöglichkeit?
@@ -98,7 +98,7 @@
                         <td>
                             <label><input type="radio" name="einzelfallbezogene_angabe_1" value="ja"> Ja</label>
                             <label><input type="radio" name="einzelfallbezogene_angabe_1" value="na"> Nicht anwendbar</label>
-                            <label><input type="radio" name="einzelfallbezogene_angabe_1" value="nein"> Nein</label>
+                            <label><input type="radio" name="einzelfallbezogene_angabe_1" value="nein" checked> Nein</label>
                         </td>
                         <td>
                             1. Gibt es einen Datenschutzbeauftragten?
@@ -112,7 +112,7 @@
                         <td>
                             <label><input type="radio" name="einzelfallbezogene_angabe_2" value="ja"> Ja</label>
                             <label><input type="radio" name="einzelfallbezogene_angabe_2" value="na"> Nicht anwendbar</label>
-                            <label><input type="radio" name="einzelfallbezogene_angabe_2" value="nein"> Nein</label>
+                            <label><input type="radio" name="einzelfallbezogene_angabe_2" value="nein" checked> Nein</label>
                         </td>
                         <td>
                             2. Gibt es einen Grund, warum die Daten verarbeitet werden, auch wenn keine Einwilligung vorliegt?
@@ -125,7 +125,7 @@
                         <td>
                             <label><input type="radio" name="einzelfallbezogene_angabe_3" value="ja"> Ja</label>
                             <label><input type="radio" name="einzelfallbezogene_angabe_3" value="na"> Nicht anwendbar</label>
-                            <label><input type="radio" name="einzelfallbezogene_angabe_3" value="nein"> Nein</label>
+                            <label><input type="radio" name="einzelfallbezogene_angabe_3" value="nein" checked> Nein</label>
                         </td>
                         <td>
                             3. Nur wenn die Verarbeitung personenbezogener Daten auf einem berechtigten Interesse beruht (siehe dazu Frage 2): Wird die Verpflichtung zur Bereitstellung bestimmter personenbezogener Daten sowie die möglichen Folgen einer Nichtbereitstellung deutlich angegeben?
@@ -138,7 +138,7 @@
                         <td>
                             <label><input type="radio" name="einzelfallbezogene_angabe_4" value="ja"> Ja</label>
                             <label><input type="radio" name="einzelfallbezogene_angabe_4" value="na"> Nicht anwendbar</label>
-                            <label><input type="radio" name="einzelfallbezogene_angabe_4" value="nein"> Nein</label>
+                            <label><input type="radio" name="einzelfallbezogene_angabe_4" value="nein" checked> Nein</label>
                         </td>
                         <td>
                             4. Werden die Daten an andere Personen oder Firmen weitergegeben?
@@ -152,7 +152,7 @@
                         <td>
                             <label><input type="radio" name="einzelfallbezogene_angabe_5" value="ja"> Ja</label>
                             <label><input type="radio" name="einzelfallbezogene_angabe_5" value="na"> Nicht anwendbar</label>
-                            <label><input type="radio" name="einzelfallbezogene_angabe_5" value="nein"> Nein</label>
+                            <label><input type="radio" name="einzelfallbezogene_angabe_5" value="nein" checked> Nein</label>
                         </td>
                         <td>
                             5. Werden die Daten in ein Land außerhalb der EU geschickt?
@@ -165,7 +165,7 @@
                         <td>
                             <label><input type="radio" name="einzelfallbezogene_angabe_6" value="ja"> Ja</label>
                             <label><input type="radio" name="einzelfallbezogene_angabe_6" value="na"> Nicht anwendbar</label>
-                            <label><input type="radio" name="einzelfallbezogene_angabe_6" value="nein"> Nein</label>
+                            <label><input type="radio" name="einzelfallbezogene_angabe_6" value="nein" checked> Nein</label>
                         </td>
                         <td>
                             6. Werden Entscheidungen automatisiert getroffen?
