--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>EinfachDSGVO</title>
   <link rel="stylesheet" href="style.css" />
+  <meta name="google-site-verification" content="-CbalfxkC1GIQH00PJv1-kk8ECdzQlA4SeWrAAgcauc" />
 </head>
 <body>
   <h1>EinfachDSGVO</h1>
